--- a/composer.json
+++ b/composer.json
@@ -1,17 +1,45 @@
 {
     "name": "conquerorsoft/my_first_library",
     "description": "This is my very first library created with composer init",
+    "keywords": [
+        "conquerorsoft",
+        "my_first_library",
+        "tutorial",
+        "phpworld 2017",
+        "workshop"
+    ],
+    "homepage": "http://www.conquerorsoft.com/my_first_library",
     "type": "library",
     "require-dev": {
-        "phpunit/phpunit": "^6.4"
+        "phpunit/phpunit": "^6.4",
+        "squizlabs/php_codesniffer": "3.*"
     },
     "license": "MIT",
     "authors": [
         {
             "name": "Christian Varela",
-            "email": "cvarela@conquerorsoft.com"
+            "email": "cvarela@conquerorsoft.com",
+            "homepage": "http://www.conquerorsoft.com/ChristianVarela",
+            "role": "Developer"
         }
     ],
     "minimum-stability": "stable",
-    "require": {}
+    "require": {
+        "php": "~5.6 || ~7.0"
+    },
+    "autoload": {
+        "psr-4": {
+            "conquerorsoft\\my_first_library\\": "src"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "conquerorsoft\\my_first_library\\": "tests"
+        }
+    },
+    "scripts": {
+        "test": "phpunit",
+        "check-style": "phpcs -p --standard=PSR2 --runtime-set ignore_errors_on_exit 1 --runtime-set ignore_warnings_on_exit 1 src tests",
+        "fix-style": "phpcbf -p --standard=PSR2 --runtime-set ignore_errors_on_exit 1 --runtime-set ignore_warnings_on_exit 1 src tests"
+    }
 }
